--- a/.ebextensions/01_node_command.config
+++ b/.ebextensions/01_node_command.config
@@ -3,3 +3,8 @@ option_settings:
     NodeCommand: "npm start"
   aws:elasticbeanstalk:application:environment:
     NODE_ENV: production
+    NPM_USE_PRODUCTION: false
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: nginx
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /health: health
