--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,14 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install
+        - cd frontend && npm install
     build:
       commands:
-        - npm run build
+        - cd frontend && npm run build
   artifacts:
-    baseDirectory: dist
+    baseDirectory: frontend/dist
     files:
       - '**/*'
   cache:
     paths:
-      - node_modules/**/*
+      - frontend/node_modules/**/*
