--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,19 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd frontend && npm install
+        - nvm use 18
+        - node --version
+        - npm --version
+        - cd frontend
+        - npm ci --verbose
+        - ls -la
     build:
       commands:
-        - cd frontend && npm run build
+        - cd frontend
+        - echo "Starting build process..."
+        - npm run build --verbose
+        - echo "Build completed, checking output..."
+        - ls -la dist/
   artifacts:
     baseDirectory: frontend/dist
     files:
