--- a/amplify.yml
+++ b/amplify.yml
@@ -4,11 +4,10 @@ frontend:
     preBuild:
       commands:
         - nvm use 18
-        - cd frontend
-        - npm install
+        - cd frontend && npm ci
     build:
       commands:
-        - npm run build
+        - cd frontend && npm run build
   artifacts:
     baseDirectory: frontend/dist
     files:
@@ -16,3 +15,6 @@ frontend:
   cache:
     paths:
       - frontend/node_modules/**/*
+  env:
+    variables:
+      NODE_ENV: production
