--- a/amplify.yml
+++ b/amplify.yml
@@ -3,11 +3,14 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm use 18
-        - cd frontend && npm ci
+        - node --version
+        - npm --version
+        - cd frontend
+        - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - cd frontend && npm run build
+        - cd frontend
+        - npm run build
   artifacts:
     baseDirectory: frontend/dist
     files:
@@ -15,6 +18,26 @@ frontend:
   cache:
     paths:
       - frontend/node_modules/**/*
+      - frontend/.npm/**/*
+  customHeaders:
+    - pattern: '**/*'
+      headers:
+        - key: 'Strict-Transport-Security'
+          value: 'max-age=31536000; includeSubDomains'
+        - key: 'X-Content-Type-Options'
+          value: 'nosniff'
+        - key: 'X-Frame-Options'
+          value: 'DENY'
+        - key: 'X-XSS-Protection'
+          value: '1; mode=block'
+        - key: 'Cache-Control'
+          value: 'public, max-age=31536000, immutable'
+    - pattern: '/index.html'
+      headers:
+        - key: 'Cache-Control'
+          value: 'no-cache, no-store, must-revalidate'
   env:
     variables:
       NODE_ENV: production
+      CI: true
+      GENERATE_SOURCEMAP: false
