--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - node --version
         - npm --version
         - cd frontend
-        - npm ci --cache .npm --prefer-offline
+        - npm ci
     build:
       commands:
         - cd frontend
